--- a/css/news.css
+++ b/css/news.css
@@ -108,8 +108,14 @@
 }
 
 .content table tr td:nth-child(3) {
+    display: block;
+    width: 400px;
     padding-left: 14px;
     box-sizing: border-box;
+    /* 말줄임표 생성 */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 /* pagination */
